Додає оформлення форм

--- a/portfolio.html
+++ b/portfolio.html
@@ -234,6 +234,14 @@
                             </svg></a></li>
                 </ul>
             </div>
+
+            <div class="subscribe">
+                <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
+                <input type="email" name="email" class="subscribe-input" placeholder="E-mail">
+                <button type="submit" class="subscribe-btn button">Подписаться<svg class="subscribe-icon">
+                        <use href="./images/icons.svg#icon-send"></use>
+                    </svg></button>
+            </div>
         </div>
     </footer>
 </body>
