--- a/index.html
+++ b/index.html
@@ -263,6 +263,14 @@
                             </svg></a></li>
                 </ul>
             </div>
+
+            <div class="subscribe">
+                <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
+                <input type="email" name="email" class="subscribe-input" placeholder="E-mail">
+                <button type="submit" class="subscribe-btn button">Подписаться<svg class="subscribe-icon">
+                    <use href="./images/icons.svg#icon-send"></use>
+                </svg></button>
+            </div>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
@@ -270,6 +278,40 @@
             <button type="button" class="btn-modal" data-modal-close><svg class="modal-icon">
                 <use href="./images/icons.svg#icon-close-modal"></use>
             </svg></button>
+            <p class="modal-title">Оставьте свои данные, мы вам перезвоним</p>
+            <form action="#" class="modal-form">
+                <label for="name" class="modal-label">Имя</label>
+                <div class="modal-field">
+                    <input type="text" name="name" id="name" class="modal-input">
+                    <svg class="modal-form-icon">
+                        <use href="./images/icons.svg#icon-form-person"></use>
+                    </svg>
+                </div>
+                <label for="tel" class="modal-label">Телефон</label>
+                <div class="modal-field">
+                    <input type="tel" name="tel" id="tel" class="modal-input">
+                    <svg class="modal-form-icon">
+                        <use href="./images/icons.svg#icon-form-phone"></use>
+                    </svg>
+                </div>
+                <label for="email" class="modal-label">Почта</label>
+                <div class="modal-field">
+                    <input type="email" name="email" id="email" class="modal-input">
+                    <svg class="modal-form-icon">
+                        <use href="./images/icons.svg#icon-form-email"></use>
+                    </svg>
+                </div>
+                <label for="comment" class="modal-label">Комментарий</label>
+                <textarea name="comment" id="comment" placeholder="Введите текст" class="modal-comment"></textarea>
+                <div class="modal-form-policy">
+                    <input type="checkbox" name="policy" id="policy" class="modal-checkbox visually-hidden">
+                    <label for="policy" class="modal-label-policy"><span class="modal-policy-icon"><svg class="icon-check" width="16" height="15">
+                        <use href="./images/icons.svg#icon-check"></use>
+                    </svg></span>Соглашаюсь с рассылкой и принимаю <a href=""
+                            class="modal-policy-link">Условия договора</a></label>
+                </div>
+                <button type="submit" class="button">Отправить</button>
+            </form>
         </div>
     </div>
     <script src="./js/modal.js"></script>
