Додає виправлення до дз 6

--- a/portfolio.html
+++ b/portfolio.html
@@ -235,13 +235,13 @@
                 </ul>
             </div>
 
-            <div class="subscribe">
+            <form class="subscribe">
                 <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
                 <input type="email" name="email" class="subscribe-input" placeholder="E-mail">
                 <button type="submit" class="subscribe-btn button">Подписаться<svg class="subscribe-icon">
                         <use href="./images/icons.svg#icon-send"></use>
                     </svg></button>
-            </div>
+            </form>
         </div>
     </footer>
 </body>
