--- a/index.html
+++ b/index.html
@@ -264,13 +264,13 @@
                 </ul>
             </div>
 
-            <div class="subscribe">
+            <form class="subscribe">
                 <h3 class="subscribe-title">Подпишитесь на рассылку</h3>
                 <input type="email" name="email" class="subscribe-input" placeholder="E-mail">
                 <button type="submit" class="subscribe-btn button">Подписаться<svg class="subscribe-icon">
                     <use href="./images/icons.svg#icon-send"></use>
                 </svg></button>
-            </div>
+            </form>
         </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
