Додає фокус на чекбокс

--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                     <input type="checkbox" name="policy" id="policy" class="modal-checkbox visually-hidden">
                     <label for="policy" class="modal-label-policy"><span class="modal-policy-icon"><svg class="icon-check" width="16" height="15">
                         <use href="./images/icons.svg#icon-check"></use>
-                    </svg></span>Соглашаюсь с рассылкой и принимаю <a href=""
+                    </svg></span>Соглашаюсь с рассылкой и принимаю&nbsp;<a href=""
                             class="modal-policy-link">Условия договора</a></label>
                 </div>
                 <button type="submit" class="button">Отправить</button>
